# MAX_ROS2

./: .gitignore  README.md  camera_calibration.py  camera_ws.py  frames_2025-07-05_14.54.43.gv  homography_matrix.npy  imu_reliability.py  motor_characterization.json  obstacle_detect.py  path_planner.py  robot_controller.py  shape_detect.py  simple_map.json  vision.py
maps/: latest_map.json  roomba_map_20250620_182348.json  roomba_map_20250620_182418.json  roomba_map_20250620_182448.json  roomba_map_20250620_182518.json  roomba_map_20250620_182548.json  roomba_map_20250620_182618.json  roomba_map_20250620_182648.json  roomba_map_20250620_182718.json  roomba_map_20250620_183033.json  roomba_map_20250620_183103.json  roomba_map_20250620_183133.json  roomba_map_20250620_183203.json  roomba_map_20250620_183352.json  roomba_map_20250620_183422.json  roomba_map_20250620_183452.json  roomba_map_20250620_183817.json  roomba_map_20250620_183847.json  roomba_map_20250620_183917.json  roomba_map_20250620_183947.json  roomba_map_20250620_184017.json  roomba_map_20250620_184047.json  roomba_map_20250620_184117.json  roomba_map_20250620_184147.json  roomba_map_20250620_184217.json  roomba_map_20250620_184247.json  roomba_map_20250620_184317.json  roomba_map_20250621_113629.json  roomba_map_20250621_113659.json  roomba_map_20250621_113729.json  roomba_map_20250621_113759.json  roomba_map_20250621_120441.json  roomba_map_20250621_120511.json  roomba_map_20250621_120541.json  roomba_map_20250621_120611.json  roomba_map_20250621_120641.json  roomba_map_20250621_120711.json  roomba_map_20250621_120741.json  roomba_map_20250621_121154.json  roomba_map_20250621_121224.json  (+20 more)
src/roomba_bringup/: package.xml  setup.py
src/roomba_bringup/config/: roomba_controllers.yaml
src/roomba_bringup/launch/: roomba.launch.py  roomba_ros2_control.launch.py
src/roomba_bringup/roomba_bringup/: camera_node.py  encoder_val_node.py  fake_camera_node.py  imu_node.py  localization_node.py  localization_node.py.backup  motor_driver.py  motor_personality_node.py  object_detect_node.py  odometry_node.py  path_planner_node.py  pid_test_node.py  pid_test_tool_node.py  sensor_reader.py  simple_mapper_node.py  simple_mapper_node.py.backup  simple_test_tool_node.py  simple_velocity_controller_node.py  single_wheel_pid_node.py  test_motor_control.py  velocity_controller_node.py
src/roomba_description/: CMakeLists.txt  package.xml
src/roomba_description/launch/: display.launch.py  robot_state.launch.py  robot_web.launch.py
src/roomba_description/rviz/: display.rviz
src/roomba_hardware/: CMakeLists.txt  package.xml  roomba_hardware_plugin.xml
src/roomba_hardware/include/roomba_hardware/: roomba_hardware_interface.hpp
src/roomba_hardware/src/: roomba_hardware_interface.cpp
src/roomba_interfaces/: CMakeLists.txt  package.xml
(+5 files in other folders)
